--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -60,7 +60,7 @@ input{
   border-style: none;
   border-radius: var(--round-border);
   //margin: var(--margin);
-  padding: 10px;
+  padding: 8px 10px;
   outline: none;
 }
 // input[type=submit] {
