--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -101,15 +101,15 @@ a{
 
 .page {
     // align everything to centre
-    position: absolute;
+    // position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    display: block;
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
 }
 
 .login{
@@ -162,11 +162,8 @@ a{
 ////// DASHBOARD
 
 nav{
-    width: 100vw;
-    height: 100px;
-    padding: var(--padding-vertical);
-    top: 0;
-    position: absolute;
+    display: block;
+    height: 60px;
 }
 
 .profileBlock {
@@ -174,7 +171,9 @@ nav{
 }
 
 .page-content{
-  width: var(--table-width);
+    width: var(--table-width);
+    margin: auto;
+    display: block;
 }
 
 .actionsBar{
