--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -62,6 +62,7 @@ input{
   //margin: var(--margin);
   padding: 8px 10px;
   outline: none;
+  width: 100%;
 }
 // input[type=submit] {
   //display: flex;
@@ -196,17 +197,24 @@ nav{
 }
 
 .searchBox {
-    width: 280px;
+    width: 250px;
+    padding-left: 12px;
+    padding-right: 12px;
     border-radius: var(--round-border);
+    color: var(--grey-color); // sets icon color
     background-color: var(--black-color);
-    input{
-      //width: 85%;
+    form {
+        display: flex;
+        align-items: center;
     }
-    span {
-        display: inline-flex;
-        vertical-align: middle;
+    input {
+        background-color: transparent;
     }
 }
+.searchBox:hover {
+    background-color: var(--dark-color);
+}
+
 select{
     background-color: var(--black-color);
     color: var(--grey-color);
@@ -216,6 +224,10 @@ option{
     background-color: var(--black-color);
     color: var(--grey-color);
     border-style: none;
+}
+
+form {
+    width: 100%;
 }
 
 .popup{
