fixed contact avatar design and functionality

--- a/web/src/styles/buttonStyles.scss
+++ b/web/src/styles/buttonStyles.scss
@@ -21,7 +21,7 @@ button{
     padding: var(--padding-vertical) var(--padding-horizontal);
     font-family: var(--font-body);
     font-size: var(--button-text-size);
-    font-weight: var(--semibold-text);
+    font-weight: var(--semibold);
     cursor: pointer;
 
     span {
