--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -11,7 +11,9 @@
     --font-body: 'Open Sans', sans-serif;
     --small-text-size: 12.5px;
     --input-text-size: 13px;
-    --semibold-text: 600;
+    --h1-size: 40px;
+    --h3-size: 18px;
+    --semibold: 600;
 
     --round-border: 5px;
     --rounder-border: 10px;
@@ -24,31 +26,35 @@
 }
 
 main{
-  background-image: url("rocks-background.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  text-align: center;
-  overflow: hidden;
-  height: 100vh;
-  font-family: var(--font-body);
-  font-size: var(--small-text-size);
-  color: var(--light-color);
+    background-image: url("rocks-background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+    overflow: hidden;
+    height: 100vh;
+    font-family: var(--font-body);
+    font-size: var(--small-text-size);
+    color: var(--light-color);
 }
 
 h1{
-  font-weight: bold;
-  font-size: 40px;
-  line-height: 57px;
-  text-align: center;
-  color: var(--light-color);
+    font-weight: bold;
+    font-size: var(--h1-size);
+    //   line-height: 57px;
+}
+
+h3 {
+    font-size: var(--h3-size);
+    font-weight: var(--semibold);
 }
 
 // for column headings
 h6{
-  font-size: var(--input-text-size);
-  font-weight: bold;
-  margin: auto;
+    font-size: var(--input-text-size);
+    font-weight: bold;
+    margin: auto;
 }
+
 p{
   font-size: var(--small-text-size);
 }
@@ -77,7 +83,7 @@ input{
 //   left: calc(50% - 120px/2 + 3px);
 //   top: calc(50% - 46px/2 + 92px);
 
-//   font-weight: var(--semibold-text);
+//   font-weight: var(--semibold);
 //   font-size: 16px;
 //   line-height: 22px;
   
@@ -102,7 +108,6 @@ a{
 
 .page {
     // align everything to centre
-    // position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
