--- a/web/src/styles/tagStyles.scss
+++ b/web/src/styles/tagStyles.scss
@@ -10,7 +10,7 @@
     padding: var(--padding-vertical) var(--padding-horizontal);
     font-family: var(--font-body);
     font-size: var(--tag-text-size);
-    font-weight: var(--semibold-text);
+    font-weight: var(--semibold);
     cursor: pointer;
 
     span {
