--- a/web/src/styles/contactStyles.scss
+++ b/web/src/styles/contactStyles.scss
@@ -21,7 +21,7 @@
     align-items: center;
 
     input {
-        margin: var(--small-margin) 0px;
+        margin: var(--small-space) 0px;
     }
 }
 
