--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -178,15 +178,21 @@ a{
 
 nav{
     display: block;
-    height: 60px;
+    height: 5vh;
 }
+
+.contact-nav {
+    display: flex;
+    justify-content: space-between;
+}
+
 ul {
     list-style: none;
     padding: 0;
     margin: 0;
 }
 
-.profileBlock {
+.user-profile {
     float: right;
 }
 
