--- a/web/src/styles/contactStyles.scss
+++ b/web/src/styles/contactStyles.scss
@@ -33,10 +33,10 @@
 }
 
 .contact-form {
-    font-size: var(--input-text-size);
+    font-size: var(--medium-p);
     text-align: left;
     label {
-        font-size: var(--input-text-size);
+        font-size: var(--medium-p);
         //float: left;
     }
 }
