--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -283,6 +283,7 @@ ul {
     }
     li:hover {
         background-color: var(--dark-blue);
+        border-radius: var(--round-border);
     }
 }
 .dropdown.open {
