moved search bar

--- a/web/src/styles/tableStyles.scss
+++ b/web/src/styles/tableStyles.scss
@@ -20,6 +20,7 @@ th, td {
     padding-left: var(--cell-padding);
     padding-right: var(--cell-padding);
     overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .table {
