--- a/web/src/styles/tableStyles.scss
+++ b/web/src/styles/tableStyles.scss
@@ -17,9 +17,10 @@ table{ // have to make the table scrollable
 }
 
 th, td {
-    //overflow: hidden;
     padding-left: var(--cell-padding);
     padding-right: var(--cell-padding);
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .table {
@@ -36,7 +37,7 @@ th, td {
 
 .dataRow {
     font-size: small;
-    height: 45px;
+    height: 40px;
     cursor: pointer;
 }
 .dataRow:hover {
@@ -45,6 +46,14 @@ th, td {
 
 .favoritesColumn {
     width: 45px;
+}
+
+.nameColumn, .catchupDateColumn, .interestsColumn{
+    width: 15%;
+}
+
+.companyColumn, .tagsColumn {
+    width: 10%;
 }
 
 .socialsColumn {
