Revert "Merge remote-tracking branch 'origin/search-filter' into last-created-modified"
This reverts commit c1f31f8242511520bff6c7c2afbca9ad0dc7f997, reversing
changes made to 97b3a334d25d6fcf54d10ce59a816f73fadd7591.

--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -297,6 +297,7 @@ ul {
     }
     li:hover {
         background-color: var(--dark-blue);
+        border-radius: var(--round-border);
     }
 }
 .dropdown.open {
