removed all errors, sorting addition all fixed, for name, company and country, and creation date added to contact page

--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -3,6 +3,7 @@
     --black-color:#0D0D0D;
     --dark-color: #101214;
     --dark-blue: #14181E;
+    --darker-blue: #0e1114;
     --light-color:#E5E5E5;
     --night-blue:#023E73;
     --highlight-blue:#034C8C;
