fixes to favourites, fix to notes, fix to enter, fix to tags backend and front end, form submit issues fix, tags issues fix

--- a/web/src/styles/buttonStyles.scss
+++ b/web/src/styles/buttonStyles.scss
@@ -39,10 +39,10 @@ button{
     font-weight: bold;
 }
 
-button[type=submit]{
+button[type=submit], .submit{
     background-color: var(--night-blue);
 }
-button[type=submit]:hover, .smallButton:hover {
+button[type=submit]:hover, .submit:hover, .smallButton:hover {
     background-color: var(--highlight-blue);
 }
 
